# Robo-ValueRL

./: README.md  install_simple.sh
openpi/: .gitignore  (+5 more)
robo_valuerl/: ReadMe.md  agent_server_policy.py  check_dataset.py  compute_norm_stats_delta_action.py  convert_online_buffer_to_lerobot_multi.py  deploy_bc.py  deploy_robo_valuerl.py  env_rtc_with_delta.py  env_with_rtc_intervention.py  humanoid_delta_fast_stats.json  pyproject.toml  requirements.txt  rtc_env_client_inference_with_delta.py  train_bc.py  train_dagger.py  train_dataset_validate.py  train_robo_value_rl_offline_rl.py  train_robo_value_rl_online_rl.py  train_robo_valuerl_value_estimator.py  train_robo_valuerl_value_estimator_for_online_rollouts.py  vis_value_function_estimation_big_5_slow.py  x_humanoid_configuration.toml
robo_valuerl/agents/: openpi_x_humanoid_agent.py  openpi_x_humanoid_agent_rtc.py  openpi_x_humanoid_critic.py
robo_valuerl/algorithm/: base_algorithm.py  bc.py  filtered_bc_pi.py  hl_gauss_distribution.py
robo_valuerl/config/: algorithm_cfg.py  data_config.py  factory.py  lerobot_features.py  model_config.py  train_config.py  value_config.py
robo_valuerl/dataset/: image_tools.py  lerobot_offline_wrapper.py  online_buffer.py  proportional_multi_dataset_sampler.py  weight_utils.py  x_humanoid_lerobot_offline_wrapper.py  x_humanoid_other_value_function_lerobot_offline_wrapper.py  x_humanoid_value_function_lerobot_offline_wrapper.py  x_humanoid_value_function_td_loss_wrapper.py
robo_valuerl/generate_action_quality/: annotate_value_function_sparse_part.py  generate_quality.py  (+1 more)
(+70 files in other folders)
