[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hierarchical_rl"
version = "0.1.0"
description = "Hierarchical Reinforcement Learning for Robotics"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "lerobot",
]

[tool.setuptools]
packages = ["agents", "config", "dataset", "rl_envs"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.json"]

